# gstreamer-cpp

./: CMakeLists.txt  README.MD
include/: gstPipelineApp.h  gstTestApp.h
src/: gstPipelineApp.cxx  gstTestApp.cxx  main.cpp
